// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1000000}
      createdAt={60000}
      description="A"
      id="1"
      key="1"
      note="Test"
    />
    <ExpenseListItem
      amount={10000}
      createdAt={345600000}
      description="R"
      id="2"
      key="2"
      note="Test"
    />
    <ExpenseListItem
      amount={10000000}
      createdAt={-345600000}
      description="V"
      id="3"
      key="3"
      note="Test"
    />
  </div>
</div>
`;

exports[`should render expense list with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <p>
        No expenses
      </p>
    </div>
  </div>
</div>
`;
